--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t mihaivlasceanu/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true mihaivlasceanu/docker-react npm run test
+  - docker run -e CI=true mihaivlasceanu/docker-react npm run test -- --coverage
